--- a/tfg.yml
+++ b/tfg.yml
@@ -1,28 +1,42 @@
 name: tfg
 channels:
+  - intel
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=main
   - _openmp_mutex=4.5=1_gnu
-  - ca-certificates=2021.10.26=h06a4308_2
-  - certifi=2021.10.8=py37h06a4308_0
+  - blas=1.0=mkl
+  - ca-certificates=2020.12.5=0
+  - certifi=2020.12.5=py37he139614_0
   - click=8.0.3=pyhd3eb1b0_0
   - dataclasses=0.8=pyh6d0b6a4_7
   - flask=2.0.2=pyhd3eb1b0_0
+  - icc_rt=2020.3=intel_304
+  - intel-openmp=2021.4.0=intel_3561
+  - intelpython=2021.4.0=0
   - itsdangerous=2.0.1=pyhd3eb1b0_0
   - jinja2=3.0.2=pyhd3eb1b0_0
+  - ld_impl_linux-64=2.35.1=h7274673_9
   - libedit=3.1.20210910=h7f8727e_0
   - libffi=3.2.1=hf484d3e_1007
   - libgcc-ng=9.3.0=h5101ec6_17
   - libgomp=9.3.0=h5101ec6_17
   - libstdcxx-ng=9.3.0=hd4cf53a_17
   - markupsafe=2.0.1=py37h27cfd23_0
+  - mkl=2021.4.0=h06a4308_640
+  - mkl-service=2.4.0=py37h5c78031_2
+  - mkl_fft=1.2.0=py37h3aece79_1
+  - mkl_random=1.2.0=py37h0107b67_1
   - ncurses=6.3=heee7806_1
-  - openssl=1.0.2u=h7b6447c_0
-  - pip=21.2.2=py37h06a4308_0
+  - numpy-base=1.21.2=py37h79a1101_0
+  - openssl=1.0.2s=0
+  - openvino-ie=2021.4=ubuntu20_intel_752
+  - openvino-ie4py=2021.4=py37_ubuntu20_intel_752
+  - openvino-ie4py-ubuntu20=2021.4=intel_752
   - python=3.7.0=h6e4f718_3
   - readline=7.0=h7b6447c_5
   - setuptools=58.0.4=py37h06a4308_0
+  - six=1.16.0=py37_0
   - sqlite=3.33.0=h62c20be_0
   - tk=8.6.11=h1ccaba5_0
   - werkzeug=2.0.2=pyhd3eb1b0_0
@@ -35,14 +49,20 @@ dependencies:
     - flask-restful==0.3.9
     - idna==3.3
     - importlib-metadata==4.8.1
+    - imutils==0.5.4
     - install==1.3.4
-    - numpy==1.21.4
+    - numpy==1.19.5
     - opencv-contrib-python==4.5.4.58
+    - opencv-python-inference-engine==2021.11.27
+    - openvino-python==2021.1
     - pandas==1.1.5
+    - pillow==8.4.0
+    - pip==21.3.1
     - python-dateutil==2.8.2
     - pytz==2021.3
+    - pyyaml==6.0
     - requests==2.26.0
-    - six==1.16.0
+    - tbb==2021.5.0
     - typing-extensions==3.10.0.2
     - urllib3==1.26.7
     - zipp==3.6.0
