--- a/Dockerfile_s
+++ b/Dockerfile_s
@@ -4,11 +4,9 @@
 
 FROM python:3.7-slim as build
 
-
 RUN DEBIAN_FRONTEND=noninteractive apt-get update && \
     apt-get install -y -q --no-install-recommends protobuf-compiler libgl1-mesa-dev libglib2.0-0 && \
     rm -rf /var/lib/apt/lists/*
-    #sudo apt-get install -y 
 
 RUN pip install --upgrade pip grpcio-tools protobuf numpy opencv-python-headless pandas pillow imutils flask flask_restful response
 #RUN git clone https://github.com/HiEST/cova-tuner.git
@@ -19,33 +17,14 @@ RUN pip install -e .
 
 FROM python:3.7-slim
 COPY --from=build /usr/local/lib/python3.7/site-packages /usr/local/lib/python3.7/site-packages
+RUN apt-get update
+#RUN apt install -y ffmpeg libsm6 libxext6 
+RUN apt install libgl1-mesa-glx libsm6 ffmpeg -y
 
-
-#RUN DEBIAN_FRONTEND=noninteractive apt-get update && \
-    #apt-get install -y -q --no-install-recommends libgl1-mesa-dev libglib2.0-0 && \
-    #rm -rf /var/lib/apt/lists/* && \
-    
-
+COPY /models /models
+COPY /cova-tuner /cova-tuner
 #ENV DEBIAN_FRONTEND=noninteractive
-#RUN apt-get update
+WORKDIR /.
+ADD server.py .
 
-#RUN apt-get install -y python3.8\
-#    python3-pip
-#RUN rm -rf /var/lib/apt/lists/*
-#pip install numpy\
-#    opencv-python-headless\
-#    pandas\
-#    flask\
-#    flask_restful\
-#    response\
-#    openvino-python
-
-ADD server_example_oV.py .
-
-ENTRYPOINT ["python", "./server_example_oV.py"]
-
-# RUN DEBIAN_FRONTEND=noninteractive apt-get update && \
-#     apt-get install -y -q --no-install-recommends python3-opencv && \
-#     rm -rf /var/lib/apt/lists/*
-
-
+ENTRYPOINT ["python", "./server.py"]
